<resources>
    <string name="app_name">גג</string>
    <string name="title_home">בית</string>
    <string name="title_map">מפה</string>
    <string name="title_notifications">הגדרות</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logo">logo</string>

    <string name="hint_password" translatable="false">סיסמה</string>
    <string name="sign_in" translatable="false">כניסה</string>
    <string name="email_hint">אימייל</string>
    <string name="go_to_registration">לא רשום? לחץ להרשמה</string>
    <string name="sign_in_title">התחברות</string>

    <string name="floor">קומה %1$s</string>
    <string name="num_rooms">%1$s חדרים</string>
    <string name="price">%1$s &#8362;</string>
    <string name="balcony">%1$s מרפסות</string>
    <string name="elevator">מעלית: %1$s</string>
    <string name="safe_room">ממ"\ד: %1$s</string>
    <string name="size">%1$s מ\"ר</string>

    <string name="available">יש</string>
    <string name="unavailable">אין</string>
    <string name="user_name_updated">שם המשתמש עודכן בהצלחה</string>
    <string name="update_info_title">עדכון פרטי משתמש</string>
    <string name="user_name_hint">שם משתמש</string>
    <string name="invalid_email_address">כתובת אימייל לא תקינה</string>
    <string name="passwords_does_not_match">הסיסמאות אינן זהות</string>
    <string name="register_title">הרשמה</string>
    <string name="repassword">הכנס סיסמה שנית</string>

    <string name="comment_hint">התגובה שלך</string>
    <string name="send">שלח</string>
    <string name="add_comment">הוספת תגובה</string>
    <string name="delete_comment">מחק תגובה</string>
    <string name="image">image</string>
</resources>
