<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_info_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="93dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_user_name"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="145dp">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/user_name_hint"
            android:imeOptions="actionNext"
            android:textAlignment="viewStart"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_layout_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:enabled="false"
            android:hint="@string/email_hint"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_email_address"
        android:visibility="invisible"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email"
        app:layout_constraintStart_toStartOf="@id/input_layout_email"
        android:textColor="@android:color/holo_red_dark" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password_validator"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/passwordValidator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords_does_not_match"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password_validator"
        app:layout_constraintStart_toStartOf="@id/input_layout_password_validator"
        android:textColor="@android:color/holo_red_dark" />

    <com.colman.finalproject.view.LoaderButton
        android:id="@+id/update_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:ctext="עדכון"
        app:cenabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@id/password_error_msg"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.colman.finalproject.view.LoaderButton
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:ctext="התנתק"
        app:cenabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@id/update_btn"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>